# slozhn

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  easyp.yaml
.github/workflows/: ci.yml  release.yml
crates/slozhn/: Cargo.toml
crates/slozhn-client/: Cargo.toml
crates/slozhn-client/src/: lib.rs  reconnect.rs
crates/slozhn-frame/: Cargo.toml
crates/slozhn-frame/benches/: throughput.rs
crates/slozhn-frame/src/: codec.rs  connection.rs  error.rs  ext.rs  flow.rs  http.rs  ids.rs  lib.rs  loopback.rs  proto.rs  stream.rs  transport.rs
crates/slozhn-frame/tests/: conformance.rs  fuzz.rs  loopback.rs  regression_hardening.rs
crates/slozhn-grpc-tests/: Cargo.toml
crates/slozhn-grpc-tests/src/: lib.rs
crates/slozhn-grpc-tests/tests/: e2e.rs  in_memory.rs
crates/slozhn-middleware/: Cargo.toml
crates/slozhn-middleware/src/: auth.rs  deadline.rs  dedup.rs  idempotency.rs  lib.rs  metrics.rs  origin.rs  otel.rs  otel_metrics.rs  rate_limit.rs  recovery.rs  retry.rs  timeout.rs  trace.rs  validate.rs
crates/slozhn-proto/: Cargo.toml
crates/slozhn-proto/src/: lib.rs
crates/slozhn-proto/src/slozhn/v1/: slozhn.v1.rs
crates/slozhn-proto/src/testing/v1/: testing.v1.rs  testing.v1.tonic.rs
crates/slozhn-proto/src/validate/: validate.rs
crates/slozhn-server/: Cargo.toml
crates/slozhn-server/src/: lib.rs  proxy.rs  ws.rs
crates/slozhn-session/: Cargo.toml
crates/slozhn-session/src/: client.rs  core.rs  lib.rs  server.rs
crates/slozhn-session/tests/: resume.rs
crates/slozhn-ws/: Cargo.toml
crates/slozhn-ws/src/: lib.rs  native.rs  wasm.rs
crates/slozhn/src/: client.rs  lib.rs  server.rs  testing.rs
docs/: protocol.md
examples/browser-app/: README.md
examples/browser-app/core/: Cargo.toml
examples/browser-app/core/src/: lib.rs
examples/browser-app/ui/: index.html  package-lock.json  package.json  vite.config.ts
examples/browser-app/ui/src/: main.ts
examples/echo-wasm/: Cargo.toml  run-browser-tests.sh
examples/echo-wasm/src/: lib.rs
examples/echo-wasm/tests/: browser.rs
examples/echo-ws/: Cargo.toml
examples/echo-ws/src/: lib.rs
examples/echo-ws/tests/: ws_auth_e2e.rs  ws_compression_e2e.rs  ws_e2e.rs  ws_gateway_e2e.rs  ws_infra_e2e.rs  ws_multinode_e2e.rs  ws_rate_limit_e2e.rs  ws_reconnect_e2e.rs  ws_session_e2e.rs  ws_soak_e2e.rs  ws_validate_e2e.rs
protocols/assets/: Cargo.toml.tmpl
protocols/slozhn/v1/: frame.proto
protocols/testing/v1/: echo.proto  validated.proto
