[package]
name = "slozhn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "tonic-compatible gRPC channel over slozhn frame streams"

[dependencies]
slozhn-frame = { path = "../slozhn-frame", version = "1.0.0" }
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tower = { version = "0.5", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# sync for reconnect state, time for backoff sleep
tokio = { workspace = true, features = ["sync", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync"] }
futures-timer = { version = "3", features = ["wasm-bindgen"] }
