[package]
name = "slozhn-frame"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Envelope protocol and stream-multiplexing state machine for slozhn"

[dependencies]
slozhn-proto = { path = "../slozhn-proto", version = "1.1.0" }
prost.workspace = true
bytes.workspace = true
thiserror.workspace = true
futures.workspace = true
futures-timer = { version = "3", features = ["wasm-bindgen"] }
# macros = only the proc-macro select!/join!, pulls no runtime — wasm-compatible
tokio = { workspace = true, features = ["sync", "macros"] }
tracing.workspace = true
http = "1"
http-body = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = { version = "2", features = ["js"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "throughput"
harness = false
