[package]
name = "slozhn-middleware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ready-made tower layers for slozhn: tracing/logging (OTel semconv), retries"

[features]
default = []
# W3C traceparent propagation (client inject / server extract)
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
# PGV message validation: reflection-based (descriptor-driven) + typed
validate = ["dep:prost-validate", "dep:prost-reflect", "dep:prost-reflect-validate"]

[dependencies]
tower = { version = "0.5", default-features = false, features = ["util"] }
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing = "0.1"
pin-project-lite = "0.2"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
fastrand = "2"
metrics = "0.24"
opentelemetry = { version = "0.32", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
prost-validate = { version = "0.2", optional = true, default-features = false }
prost-reflect = { version = "0.16", optional = true }
prost-reflect-validate = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true, features = ["sync", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3"
opentelemetry_sdk = { version = "0.32", features = ["testing"] }
metrics-util = "0.19"
