[package]
name = "slozhn-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bridge: slozhn frame streams -> tonic services"

[dependencies]
slozhn-frame = { path = "../slozhn-frame", version = "1.0.2" }
slozhn-session = { path = "../slozhn-session", version = "1.0.2" }
tonic = { version = "0.14", default-features = false, features = ["codegen", "router"] }
tower = { version = "0.5", default-features = false }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing.workspace = true
axum = { version = "0.8", default-features = false, features = ["ws", "http1", "tokio"] }
