[package]
name = "slozhn-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resume layer for slozhn: seq/ack/replay, streams survive reconnects"

[dependencies]
slozhn-frame = { path = "../slozhn-frame", version = "1.0.1" }
prost.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
futures-timer = { version = "3", features = ["wasm-bindgen"] }
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
