[package]
name = "slozhn-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform WebSocket byte duplex for slozhn"

[dependencies]
slozhn-frame = { path = "../slozhn-frame", version = "1.0.0" }
futures.workspace = true
bytes.workspace = true
http = "1"
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = "0.29"
tokio = { workspace = true, features = ["net"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "BinaryType", "MessageEvent", "CloseEvent", "ErrorEvent"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
