[package]
name = "slozhn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC over WebSocket for native and wasm: full streaming, reconnect, transparent resume"
readme = "../../README.md"
keywords = ["grpc", "websocket", "wasm", "tonic", "streaming"]
categories = ["network-programming", "web-programming", "wasm"]

[features]
default = ["client"]
client = []
server = ["dep:slozhn-server"]
middleware = ["dep:slozhn-middleware"]
# W3C traceparent propagation in the middleware TraceLayer
otel = ["middleware", "slozhn-middleware/otel"]
# PGV message validation (reflection + typed) in the middleware ValidateLayer
validate = ["middleware", "slozhn-middleware/validate"]
# In-process client<->server test harness (bufconn equivalent). Dev-only:
# pulls the server side into the client's dependency graph.
testing = ["client", "server", "dep:tower", "dep:tonic"]

[dependencies]
slozhn-frame = { path = "../slozhn-frame", version = "1.1.0" }
slozhn-client = { path = "../slozhn-client", version = "1.1.0" }
slozhn-session = { path = "../slozhn-session", version = "1.1.0" }
slozhn-ws = { path = "../slozhn-ws", version = "1.1.0" }
slozhn-server = { path = "../slozhn-server", version = "1.1.0", optional = true }
slozhn-middleware = { path = "../slozhn-middleware", version = "1.1.0", optional = true }
futures.workspace = true
http = "1"
tower = { version = "0.5", default-features = false, optional = true }
tonic = { version = "0.14", default-features = false, features = ["codegen"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
