[package]
name = "echo-wasm"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slozhn = { path = "../../crates/slozhn" }
slozhn-proto = { path = "../../crates/slozhn-proto" }
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
futures.workspace = true
bytes.workspace = true
http = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
