[package]
name = "echo-ws"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
slozhn = { path = "../../crates/slozhn", features = ["client", "server", "middleware", "validate"] }
slozhn-client = { path = "../../crates/slozhn-client" }
slozhn-proto = { path = "../../crates/slozhn-proto" }
tonic = { version = "0.14", default-features = false, features = ["codegen", "router", "gzip", "server", "channel"] }
tonic-reflection = "0.14.6"
tonic-health = "0.14.6"
axum = { version = "0.8", default-features = false, features = ["ws", "http1", "tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
tokio-stream = "0.1"
futures.workspace = true
tower = { version = "0.5", default-features = false, features = ["util"] }
bytes.workspace = true
http = "1"
prost = "0.14"
prost-validate = { version = "0.2", default-features = false }
